<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".VisualizarVideojuego">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cajaTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#00FFFF"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:hintTextColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTitulo"
                style="@style/resaltado2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/titulo"
                android:maxLength="25"
                android:textColor="#FFFFFF"
                android:textColorHint="#00FFFF"
                android:textSize="30sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/imgGameplayNueva"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/gameplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajaTitulo"
            app:srcCompat="@drawable/juego1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cajaPlataforma"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#00FFFF"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:hintTextColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgGameplayNueva">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPlataforma"
                style="@style/NuevoCampo"
                android:drawableStart="@drawable/plataforma"
                android:hint="@string/plataforma"
                android:maxLength="25" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cajaFiltro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#00FFFF"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:hintTextColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cajaPlataforma">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtGenero"
                style="@style/NuevoCampo"
                android:drawableStart="@drawable/genero"
                android:hint="@string/genero"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cajaAnoFabricacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="64dp"
            android:textColorHint="#FFFFFF"
            app:boxStrokeColor="#00FFFF"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:hintTextColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cajaFiltro">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAnoSalida"
                style="@style/NuevoCampo"
                android:drawableStart="@drawable/ano_salida"
                android:hint="@string/anoSalida"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCrear"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/crear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnVolver"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cajaAnoFabricacion" />

        <Button
            android:id="@+id/btnVolver"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCrear"
            app:layout_constraintTop_toBottomOf="@+id/cajaAnoFabricacion" />

        <Button
            android:id="@+id/btnSiguienteImg"
            style="@style/Boton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/derecha"
            app:layout_constraintBottom_toBottomOf="@+id/imgGameplayNueva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgGameplayNueva"
            app:layout_constraintTop_toTopOf="@+id/imgGameplayNueva" />

        <Button
            android:id="@+id/btnAnteriorImg"
            style="@style/Boton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/izquierda"
            app:layout_constraintBottom_toBottomOf="@+id/imgGameplayNueva"
            app:layout_constraintEnd_toStartOf="@+id/imgGameplayNueva"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgGameplayNueva" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>